# solana-test-cli

./: Cargo.toml  Config.yaml  README.md
src/: main.rs
