[package]
name = "test_solana_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.27", features = ["derive"] }
futures = "0.3.31"
rayon = "1.10.0"
serde = "1.0.217"
serde_yaml = "0.9.34"
solana-client = "2.1.10"
solana-program = "2.1.10"
solana-sdk = "2.1.10"
thiserror = "2.0.11"
tokio = "1.43.0"
yaml-rust = "0.4.5"
